[project]
name = "metastore-service"
version = "0.1.0"
description = "Metadata management service for storing and managing application metadata, configurations, and feature flags"
authors = [
    {name = "Nam Tran", email = "nam.tranphuong@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["microservices", "metadata", "configuration", "feature-flags", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "structlog>=24.0.0,<25.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "cachetools>=5.0.0,<6.0.0",
    "jsonschema>=4.20.0,<5.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.19.0",
    "shared[database,caching,observability,fastapi]",
]

# ============================================================================
# Build System - Modern hatchling with src layout
# ============================================================================

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metastore_service"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    ".venv/",
    "__pycache__/",
    ".pytest_cache/",
]

# ============================================================================
# UV Configuration
# ============================================================================

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

# ============================================================================
# Dependency Groups
# ============================================================================

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "aiosqlite>=0.19.0",
]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E712",   # Comparison to True/False (needed for SQLAlchemy filters)
    "B008",   # Function calls in default arguments
    "B009",   # getattr with constant
    "B017",   # pytest.raises(Exception)
    "B904",   # raise from err
    "W293",   # Blank line with whitespace
    "F402",   # Import shadowed by loop variable
    "SIM102", # Nested if
    "SIM103", # Return bool condition
    "SIM108", # Ternary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "F841", "PLR", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["metastore_service", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/metastore_service"]
branch = true
