[project]
name = "notification-service"
version = "0.1.0"
description = "Notification delivery service — consumes domain events and dispatches notifications via email, SMS, push, and webhook channels."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "email-validator>=2.2.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "prometheus-client>=0.22.0",
    "aio-pika>=9.3.0",
    "redis>=5.2.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.11.0",
    "shared[observability,caching,messaging,fastapi]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "mypy>=1.14",
    "ruff>=0.9.0",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notification_service"]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["A", "E", "W", "F", "I", "B", "C4", "UP", "SIM", "PTH", "RUF"]

[tool.coverage.run]
source = ["src/notification_service"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
